# sc_app

./: .clang-format  CMakeLists.txt  README.md  main.cpp
